changing file structure for github pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
 <!-- fonts -->
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
@@ -38,18 +38,18 @@
           <span class="icon-bar"> </span>
         </button>
 
-        <a class="navbar-brand" href="../views/index.html"> Piedmont Lawn Services </a>
+        <a class="navbar-brand" href="index.html"> Piedmont Lawn Services </a>
 
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="">
-              <a href="../views/about.html">About</a>
+              <a href="about.html">About</a>
             </li>
             <li>
-              <a href="../views/services.html">Services</a>
+              <a href="services.html">Services</a>
             </li>
             <li>
-              <a href="../views/quote.html">request Quote</a>
+              <a href="quote.html">request Quote</a>
             </li>
 
           </ul>
@@ -69,13 +69,13 @@
 
               <div class="mySlides">
                 <div class="numbertext">1 / 2</div>
-                <img src="../updated yard.jpg" style="height: 350px; width: 100%;  border: 10px inset rgb(235, 217, 217);">
+                <img src="updated yard.jpg" style="height: 350px; width: 100%;  border: 10px inset rgb(235, 217, 217);">
                 <div class="text">"I couldn't be happier with the results of my lawn! I am grateful for Pidemont's professionalism and great rates!" -Audrey</div>
               </div>
               
               <div class="mySlides">
                 <div class="numbertext">2 / 2</div>
-                <img src="../updated new yard (1).jpg" style="height: 350px; width: 100%;  border: 10px inset rgb(235, 217, 217);">
+                <img src="updated new yard (1).jpg" style="height: 350px; width: 100%;  border: 10px inset rgb(235, 217, 217);">
                 <div class="text">"Great company, great people and great service, what more could you want?" -Ronnie </div>
               </div>
               
