--- a/quote.html
+++ b/quote.html
@@ -45,18 +45,18 @@
                 <span class="icon-bar"> </span>
             </button>
 
-            <a class="navbar-brand" href="../views/index.html"> Piedmont Lawn Services </a>
+            <a class="navbar-brand" href="index.html"> Piedmont Lawn Services </a>
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
-                        <a href="../views/about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="../views/services.html">Services</a>
+                        <a href="services.html">Services</a>
                     </li>
                     <li>
-                        <a href="../views/quote.html">request Quote</a>
+                        <a href="quote.html">request Quote</a>
                     </li>
                 </ul>
             </div>
