--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="../css/about.css">
+    <link rel="stylesheet" type="text/css" href="./css/about.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 
@@ -44,19 +44,19 @@
                 <span class="icon-bar"> </span>
             </button>
 
-            <a class="navbar-brand" href="../views/index.html"> Piedmont Lawn Services </a>
+            <a class="navbar-brand" href="index.html"> Piedmont Lawn Services </a>
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
-                        <a href="../views/about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="../views/services.html">Services</a>
+                        <a href="services.html">Services</a>
                     </li>
                     </li>
                     <li>
-                        <a href="../views/quote.html">request Quote</a>
+                        <a href="quote.html">request Quote</a>
                     </li>
 
 
