fixed company name and background sizing

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     </li>
                     </li>
                     <li>
-                        <a href="quote.html">request Quote</a>
+                        <a href="quote.html">Request Quote</a>
                     </li>
 
 
@@ -81,7 +81,7 @@
     <div class="navbar  navbar-inverse navbar-fixed-bottom">
         <div class="container">
             <div class="navbar-text">
-                <p> © Lawn and Order LLP 2018.</p>
+                <p> © Piedmont Services LLP 2018.</p>
             </div>
 
         </div>
@@ -93,19 +93,3 @@
 </html>
 
 
-<!-- ignore below script will remove at later time, need to keep as referance for another project-->
-<!-- <script>
-    var i = 0;
-    var txt =
-        'We’re a locally owned and operated lawn care company that was started out of a garage. Michael Benson, one of the owners of Piedmont, has always loved working on his lawn. He would always consider himself to be in an unspoken competition with his neighbors, and would work on his lawn until he was content. He enjoys helping others with their lawn and answering his co-workers questions. This lead to the beginning of Piedmont Lawn Services with Vincent Nardozzi, helping others conquer their lawn and keep curb appeal, appealing.';
-    var speed = 5; /* The speed/duration of the effect in milliseconds */
-
-    function typeWriter() {
-        if (i < txt.length) {
-            document.getElementById("type").innerHTML += txt.charAt(i);
-            i++;
-            setTimeout(typeWriter, speed);
-        }
-    }
-    typeWriter();
-</script> -->
