--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a href="services.html">Services</a>
             </li>
             <li>
-              <a href="quote.html">request Quote</a>
+              <a href="quote.html">Request Quote</a>
             </li>
 
           </ul>
@@ -163,7 +163,7 @@
     <div class="navbar  navbar-inverse navbar-fixed-bottom">
       <div class="container">
         <div class="navbar-text">
-          <p> © Lawn and Order LLP 2018.</p>
+          <p> © Piedmont Services LLP 2018</p>
         </div>
       </div>
     </div>
