--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
                         <a href="services.html">Services</a>
                     </li>
                         <li>
-                        <a href="quote.html">request Quote</a>
+                        <a href="quote.html">Request Quote</a>
                     </li>
                     
 
@@ -110,7 +110,7 @@
     <div class="navbar  navbar-inverse navbar-fixed-bottom">
         <div class="row">
             <div class="navbar-text">
-                    <p> © Lawn and Order LLP 2018. * additional charges may apply for seasonal products</p2>
+                    <p> © Piedmont Services LLP 2018 * additional charges may apply for seasonal products</p2>
             </div>
 
         </div>
