--- a/quote.html
+++ b/quote.html
@@ -56,7 +56,7 @@
                         <a href="services.html">Services</a>
                     </li>
                     <li>
-                        <a href="quote.html">request Quote</a>
+                        <a href="quote.html">Request Quote</a>
                     </li>
                 </ul>
             </div>
@@ -122,7 +122,7 @@
           <div class="navbar  navbar-inverse" style="margin-bottom: 0">
                 <div class="container">
                   <div class="navbar-text">
-                    <p> © Lawn and Order LLP 2018.</p>
+                    <p> © Piedmont Services LLP 2018</p>
                   </div>
             
                 </div>
