updated to latest service offering

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Piedmont Lawn Services</title>
+  <title>Piedmont Lawn Care</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <!-- Latest compiled and minified CSS -->
@@ -69,14 +69,14 @@
 
               <div class="mySlides">
                 <div class="numbertext">1 / 2</div>
-                <img src="updated yard.jpg" style="height: 350px; width: 100%;  border: 10px inset rgb(235, 217, 217);">
-                <div class="text">"I couldn't be happier with the results of my lawn! I am grateful for Pidemont's professionalism and great rates!" -Audrey</div>
+                <img src="updated yard.jpg" style="margin-left: 40px; height: 350px; width: 90%;  border: 10px inset rgb(235, 217, 217);">
+                <div class="text" style="margin-left: 60px;">"I couldn't be happier with the results of my lawn! I am grateful for Pidemont's professionalism and great rates!" -Audrey</div>
               </div>
               
               <div class="mySlides">
                 <div class="numbertext">2 / 2</div>
-                <img src="updated new yard (1).jpg" style="height: 350px; width: 100%;  border: 10px inset rgb(235, 217, 217);">
-                <div class="text">"Great company, great people and great service, what more could you want?" -Ronnie </div>
+                <img src="updated new yard (1).jpg" style="margin-left: 40px; height: 350px; width: 90%;  border: 10px inset rgb(235, 217, 217);">
+                <div class="text" style="margin-left: 60px;">"Great company, great people and great service, what more could you want?" -Ronnie </div>
               </div>
               
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -153,7 +153,7 @@
           </div>
         </div>
           <div class="container banner">
-              <h1>keeping curb appeal appealing!</h1>
+              <h1 style="color:rgb(192, 192, 192); margin-top: 200px;">keeping curb appeal appealing!</h1>
             </div>
       </div>
     </div>
