--- a/quote.html
+++ b/quote.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Piedmont Lawn Services</title>
+    <title>Piedmont Lawn Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
                 <span class="icon-bar"> </span>
             </button>
 
-            <a class="navbar-brand" href="index.html"> Piedmont Lawn Services </a>
+            <a class="navbar-brand" href="index.html"> Piedmont Lawn Service </a>
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -119,7 +119,7 @@
 
 
 
-          <div class="navbar  navbar-inverse" style="margin-bottom: 0">
+          <div class="navbar  navbar-inverse navbar-fixed-bottom" style="margin-bottom: 0">
                 <div class="container">
                   <div class="navbar-text">
                     <p> © Piedmont Services LLP 2018</p>
