--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Piedmont Lawn Services</title>
+    <title>Piedmont Lawn Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -60,37 +60,35 @@
 
     <div class="row" id="mmbr">
         <div class="col-xs-12 animated fadeIn">
-            <h1>monthly memembership options</h1>
+            <h1>Service Options</h1>
         </div>  
 
     </div>
     <div id="services" class="container">
         <div class="row">
             <div class="col-lg-4 animated rollIn">
-                <p>Premium:</p>
-                <p>$80.00 *</p>
+                <p>Complete Care:</p>
+                <p>$75.00 Monthly*</p>
                 <br>
                 <ol>
-                    <li>full lawn trim, edge, weed-eat, and blow</li>
-                    <li>do some crap in the fall</li>
-                    <li>do some crap in the summer </li>
+                    <li>This service includes the Quick Cut service as well as the Bush and Tree Shape service. You will also receive seasonal lawn servicing in spring and fall. 
+                        Details disccused opon purchase.</li>
                 </ol>
 
             </div>
             <div class="col-lg-4 animated rollIn">
-                <p>standard:</p>
+                <p>Bush and Tree Shape:</p>
                 <p>$60.00 *</p>
                 <br>
                 <ol>
-                    <li>full lawn trim, edge, weed-eat, and blow</li>
-                    <li>advise of some crap to do in the fall/summer</li>
+                    <li>Trim back landscaped bushes around home and prune trees back.</li>
               
                 </ol>
 
             </div>
             <div class="col-lg-4 animated rollIn">
-                <p>basic:</p>
-                <p>$40.00</p>
+                <p>Quick Cut:</p>
+                <p>$50.00</p>
                 <br>
                 <ol>
                     <li>full lawn trim, edge, weed-eat, and blow</li>
@@ -110,7 +108,7 @@
     <div class="navbar  navbar-inverse navbar-fixed-bottom">
         <div class="row">
             <div class="navbar-text">
-                    <p> © Piedmont Services LLP 2018 * additional charges may apply for seasonal products</p2>
+                    <p> © Piedmont Services LLP 2018 * additional charges may apply for seasonal products. All pricing is based on standard .5 acre lawn.</p2>
             </div>
 
         </div>
