--- a/about.html
+++ b/about.html
@@ -49,18 +49,17 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="">
                         <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="services.html">Services</a>
                     </li>
-                    </li>
                     <li>
                         <a href="quote.html">Request Quote</a>
                     </li>
-
-
-
                 </ul>
             </div>
         </div>
@@ -68,7 +67,7 @@
 
     <div class="col-xs-6 col-xs-offset-3 animated bounceInDown" id="about">
 
-        <p>We’re a locally owned and operated lawn care company that was started out of a garage. Michael Benson, one of the owners of Piedmont, has always loved working on his lawn. He would always consider himself to be in an unspoken competition with his neighbors, and would work on his lawn until he was content. He enjoys helping others with their lawn and answering his co-workers questions. This lead to the beginning of Piedmont Lawn Services with Vincent Nardozzi, helping others conquer their lawn and keep curb appeal, appealing.</p>
+        <p class='aboutCopy'>We're a locally owned and operated lawn care company that was started out of a garage. Michael Benson, one of the owners of Piedmont, has always loved working on his lawn. He would always consider himself to be in an unspoken competition with his neighbors, and would work on his lawn until he was content. He enjoys helping others with their lawn and answering his co-workers questions. This lead to the beginning of Piedmont Lawn Services with Vincent Nardozzi, helping others conquer their lawn and keep curb appeal, appealing.</p>
 
     </div>
 
