--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
 
       <div id="ourContact" class="col-xs-6">
-        <div style="background-color: #049b10; width: 80%; height: 260px; border-radius: 5%; text-align: center">
+        <div style="background-color: #d7d3d3; width: 80%; height: 260px; text-align: center">
           <div>
             <div>
 
@@ -101,9 +101,6 @@
                   <h3>
                     <span itemprop="name">our contact info</span>
                   </h3>
-                  <b>Phone:</b>
-                  <span itemprop="telephone">704-559-9467</span>
-                  <br>
                   <b>Email:</b>
                   <a href="mailto:piedmontlawncare1@gmail.com">piedmontlawncare1@gmail.com</a>
                 </div>
@@ -164,6 +161,9 @@
       <div class="container">
         <div class="navbar-text">
           <p> © Piedmont Services LLP 2018</p>
+          <span style="margin-left: 10px;">Phone: 704-559-9467</span>
+          <a style="margin-left: 10px;" href="mailto:piedmontlawncare1@gmail.com">piedmontlawncare1@gmail.com</a>
+
         </div>
       </div>
     </div>
