--- a/quote.html
+++ b/quote.html
@@ -50,6 +50,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="">
                         <a href="about.html">About</a>
                     </li>
                     <li>
