--- a/services.html
+++ b/services.html
@@ -41,18 +41,17 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="">
                         <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="services.html">Services</a>
                     </li>
-                        <li>
+                    <li>
                         <a href="quote.html">Request Quote</a>
                     </li>
-                    
-
-
-
                 </ul>
             </div>
         </div>
@@ -65,34 +64,34 @@
 
     </div>
     <div id="services" class="container">
-        <div class="row">
+        <div class="row services-copy">
             <div class="col-lg-4 animated rollIn">
                 <p>Complete Care:</p>
                 <p>$75.00 Monthly*</p>
                 <br>
-                <ol>
+                <ul>
                     <li>This service includes the Quick Cut service as well as the Bush and Tree Shape service. You will also receive seasonal lawn servicing in spring and fall. 
-                        Details disccused opon purchase.</li>
-                </ol>
+                       <span style="font-size: 10px;"><br><sup>*</sup>Details disccused opon purchase</span>.</li>
+                </ul>
 
             </div>
             <div class="col-lg-4 animated rollIn">
                 <p>Bush and Tree Shape:</p>
                 <p>$60.00 *</p>
                 <br>
-                <ol>
+                <ul>
                     <li>Trim back landscaped bushes around home and prune trees back.</li>
               
-                </ol>
+                </ul>
 
             </div>
             <div class="col-lg-4 animated rollIn">
                 <p>Quick Cut:</p>
                 <p>$50.00</p>
                 <br>
-                <ol>
+                <ul>
                     <li>full lawn trim, edge, weed-eat, and blow</li>
-                </ol>
+                </ul>
 
             </div>
 
